@@ -1,4 +1,6 @@
 DIST cgnslib_2.5-2.tar.gz 390011 RMD160 9ef07fd8ebcebb74ab9a3cc39303fe2e3b722b7e SHA1 b1b5a8e9f73f12c04e5ebda92f9d6e8a347ecf30 SHA256 5e12a8042f1564a0d16f5eebecc79508684de68e0ba192cf44217e075d41de2c
+DIST cgnslib_2.5-3.tar.gz 394362 RMD160 23c4f2b733a332cf75a3942d2ae8f3f96e1d719f SHA1 174d5e5b180ecd47085cbee19ebe24985826ed92 SHA256 6d8cdf4cd807efa2766f089ec6440812ed4352f0342476cd949cff50a2302ca9
 EBUILD cgnslib-2.5.2.ebuild 1565 RMD160 39ad2b400eb0623971fd86ceb5347831a3f384ea SHA1 859bd3e74feec9c78a8f15ef1edddff236425bb0 SHA256 57471225860f69a3598bcf5daa48373b45069e607ed1ab352be70303b09fe9fe
-MISC ChangeLog 520 RMD160 366e3b7a1699a1da27bd99e273a6bf26e985fe6c SHA1 2471c17cb1abb03483d79bb5270047f814706962 SHA256 1b4fc2c3f54ecf6a9eee5a505284393330c4b54ff2aa2a03e790c9e4312f1de2
+EBUILD cgnslib-2.5.3.ebuild 1767 RMD160 6a95e71f3053c78fcc30c355fd77859a4f503623 SHA1 16518bc811461a33e0f508ec7048ed60aaa5ed0a SHA256 3d9993fd50132e1d140476e7779d3be19002588f0395935441496985c061e3a2
+MISC ChangeLog 614 RMD160 4286c4f7bb68ed5168eff5a459f5e0e8acd45ded SHA1 f8b08d9bc373e798ac4c178e7d48d7dc795ba849 SHA256 a9549264a6df82015c6d6d8bb6959a9964b6ef7ed820bb68cf1235caecb81921
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
