@@ -1,6 +1,9 @@
 # ChangeLog for sci-libs/cgnslib
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  04 Aug 2008; Oliver Borm (boroli) <oli.borm@web.de> +cgnslib-2.5.3.ebuild:
+  Version bump.
 
   27 Nov 2007; Oliver Borm (boroli) oli.borm@web.de cgnslib-2.5.2.ebuild:
   Added additional die commands to ebuild, thanks to Maxim Loginov.
